[package]
name = "curate-issue"
version = "0.1.0"
authors = ["Matthias Bartelmeß <mba@fourplusone.de>"]

[dependencies]
pulldown-cmark = { version = "0.0.11", default-features = false }

hyper = "0.11"
reqwest = "0.8.*"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

rss = "1.0"
regex = "1.0"

scraper = "0.6"